--- a/food.html
+++ b/food.html
@@ -20,7 +20,7 @@
   <script src="foods.js"></script>
 
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 
 </head>
 
@@ -29,15 +29,15 @@
 
 <div class="headline">
   <h1>Food Deserts</h1>
-  <hr class="headerline" width="250" align="right" style="margin-right:219px">
-  <p class="byline">By: India Fizer &amp; Iris Torres</p>
+  <hr class="headerline" width="250" align="right" style="margin-left:219px">
+  <p class="byline">By India Fizer &amp; Iris Torres</p>
 </div>
 </header>
 
 <div class="container">
 
 <p class="head">
-  The exhausted 17-year old sat alone, only accompanied by four heavy plastic bags aboard a train for her 30-minute commute back home to the South Bronx. From the meat market in East Harlem, the round-trip took more than an hour, not including the walk she had to take from the Prospect Ave and Westchester Ave train station to her home, all while carrying the bags of irony smelling flesh: <q>it was terrible.</q> Her subway fare, travel time, cost of the fresh meat, in addition to her tiredness was all too much, but <q>it’s just the hardship that comes with it, to just eat food.</q></p>
+  The exhausted 17-year old sat alone, only accompanied by four heavy plastic bags aboard a train for her 30-minute commute back home to the South Bronx. From the meat market in East Harlem, the round-trip took more than an hour, not including the walk she had to take from the Prospect Ave and Westchester Ave train station to her home, all while carrying the bags of irony smelling flesh: <q>it was terrible.</q> Her subway fare, travel time, cost of the fresh meat, in addition to her tiredness was all too much, but <blockquote><q>it’s just the hardship that comes with it, to just eat food.</q></p></blockquote>
   <p class="space"> Such a vital, strenuous journey was not uncommon, but it had to be taken for the privilege of fresh food.
   </p>
   <p class="space">Her neighborhood wasn’t entirely devoid of food, but substantial, healthy food was absent.</p>
@@ -122,7 +122,7 @@
   <p class="space"> Karen Washington has been striving to answer that question for over 20 years. An urban farmer and community activist, Washington has been growing her own food in <q>The Garden of Happiness</q> in for over 28 years. She is also an active member of Rise and Root Farm, and La Familia Verde Farmer’s Market in the Bronx According to La Familia Verde’s <a href="http://www.lafamiliaverde.org/about-us.html" target="_blank">website</a>, five community gardens (including <q>The Garden of Happiness</q>), volunteer to educate and empower both the public and policymakers to promote community change. </p>
   <p class="space">Washington, a James Beard Foundation Leadership Award recipient, moved to the Bronx in 1985, close to the Bronx Zoo. Three years later, the Garden of Happiness was born. For more than 20 years, she has been a catalyst for not only healthy eating and farming, but as an advocate and activist. She travels around the country and discusses social justice from a race and equity standpoint. Washington begins to break down the enormous difference between food desert and food apartheid. </p>
 <p class="space"><q>Food desert is a term that we don’t use because it’s an <i>outsider term</i> used to sort of dictate what our neighborhood is all about. The premise around that term is that in low income neighborhoods, mostly neighborhoods of color, [is] that we don’t have food, and so the symbol is a desert. We tell people, we do have food. What we don’t have is access to healthy food. So instead of calling it a food desert, we like to use the term ‘food apartheid.’</q></p>
-<p class="space"> Christopher Cook, author of <q>Diet for a Dead Planet: Big Business and the Coming Food Crisis</q> published a piece on CenterforJournalism.org. Titled, <q>Covering Food Deserts,</q> he <a href="https://www.centerforhealthjournalism.org/resources/lessons/covering-food-deserts" target="_blank">references</a> food justice advocate, Hank Herrera, who is also the President and CEO of the Popular Research, Education &amp; Policy (C-PREP). Herrera explains the controversy of the term food desert in Cook’s piece: explains, <blockquote>"Lack of access to fresh, healthy, affordable food result from structural inequities, deliberate public and private resource allocation decisions that exclude healthy from those communities."" </blockquote><p>"That kind of inequity is food apartheid. The desert metaphor is inappropriate for conditions deliberately constructed by people. The desert metaphor only diverts attention from the inequitable, unjust condition."</q></p>
+<p class="space"> Christopher Cook, author of <q>Diet for a Dead Planet: Big Business and the Coming Food Crisis</q> published a piece on CenterforJournalism.org. Titled, <q>Covering Food Deserts,</q> he <a href="https://www.centerforhealthjournalism.org/resources/lessons/covering-food-deserts" target="_blank">references</a> food justice advocate, Hank Herrera, who is also the President and CEO of the Popular Research, Education &amp; Policy (C-PREP). Herrera explains the controversy of the term food desert in Cook’s piece: explains, <blockquote>"Lack of access to fresh, healthy, affordable food result from structural inequities, deliberate public and private resource allocation decisions that exclude healthy from those communities."</blockquote><p>"That kind of inequity is food apartheid. The desert metaphor is inappropriate for conditions deliberately constructed by people. The desert metaphor only diverts attention from the inequitable, unjust condition."</q></p>
 
 
 
