--- a/food.html
+++ b/food.html
@@ -45,7 +45,7 @@
   <p class="space">Distance is a significant inconvenience in the low income neighborhoods that food apartheid occurs in. Taking a cab to the local grocery store is not financially feasible, and the hassle of taking a bus or train isn’t cost effective at times. For some, grocery shopping is an essential task that gets done because it has to be. Most people see grocery shopping an annoying chore, but imagine if it was no longer a feasible option for getting food? Imagine if it was no longer a matter of choice.
   This was normal to her.</p>
 
-  <center><iframe width="750" height="500" src="https://www.youtube.com/embed/G8KpPw303PY" frameborder="0" allowfullscreen></iframe></center>
+  <center><iframe width="560" height="315" src="https://www.youtube.com/embed/4x4QOGMGL4M" frameborder="0" allowfullscreen></iframe></center>
 
   <p>Ariadne Vazquez found herself living in the heart of a food apartheid, which is more commonly known as food deserts: a Band-Aid term that glosses over the myriad of issues that come with racial and economic disparities.</p> <p class="space"> She and her mother lived in the South Bronx, where they faced hardships as their everyday realities. The two lived in low-income housing at one point they had a rat infestation. Her mother was terrified of rats, and her phobia intensified because of the infestation–as a result they had to buy a limited amount of food at a time. They had food: pandulce (sweet Mexican bread), tostones, platanos, and sometimes they ate steamed fish and vegetables from the Longwood Fish Market, which is <q>probably the healthiest food in that neighborhood.</q></p>
 
